@@ -20,9 +20,10 @@
 #
 # @param securetty
 #   List of ttys available to log into
+#   Defaults to ['tty0', 'tty1', 'tty2', 'tty3', 'tty4']
 #
-#   * Set to false to disable management
-#   * If the Array is empty (default) then root will not be able to log into
+#   * If set to false, management of /etc/securetty will be disabled
+#   * If set to true or an empty array, root will not be able to log into
 #     any local device
 #   * If the string 'ANY_SHELL' is found in the Array, then the
 #     ``/etc/securetty`` file will be removed and root will be able to login
@@ -48,7 +49,7 @@ class useradd (
   Boolean                                      $manage_passwd_perms   = true,
   Boolean                                      $manage_sysconfig_init = true,
   Boolean                                      $manage_useradd        = true,
-  Variant[Boolean,Array[String]]               $securetty             = [],
+  Variant[Boolean,Array[String]]               $securetty             = ['tty0', 'tty1', 'tty2', 'tty3', 'tty4'],
 
   Array[Stdlib::AbsolutePath]                  $shells_default        = [ '/bin/sh','/bin/bash','/sbin/nologin','/usr/bin/sh','/usr/bin/bash','/usr/sbin/nologin' ],
   Variant[Boolean,Array[Stdlib::AbsolutePath]] $shells                = []
@@ -70,12 +71,19 @@ class useradd (
       $_ensure_securetty = 'file'
     }
 
+    if $securetty == true {
+      $_securetty = []
+    }
+    else {
+      $_securetty = $securetty
+    }
+
     file { '/etc/securetty':
       ensure  => $_ensure_securetty,
       owner   => 'root',
       group   => 'root',
       mode    => '0400',
-      content => join($securetty,"\n")
+      content => join($_securetty,"\n")
     }
   }
 
